<resources>
    <string name="app_name">Mobilalk-Kotprog</string>
    <string name="logo_description">Vízóra logó</string>
    <string name="app_title">Vízóra</string>
    <string name="app_description">
        Könnyedén rögzítheted a vízóraállásodat, átláthatod a fogyasztásodat, és értesítést kapsz, amikor itt az ideje a következő leolvasásnak.
    </string>
    <string name="app_what_we_offer">Egyszerű. Gyors. Papírmentes.</string>
    <string name="register">Regisztráció</string>
    <string name="already_have_an_account_link">Már van regisztrált fiókod? Jelentkezz be!</string>
    <string name="create_user">Fiók létrehozása</string>
    <string name="email">Email-cím</string>
    <string name="firstname">Keresztnév</string>
    <string name="lastname">Vezetéknév</string>
    <string name="repeat_password">Jelszó újra</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register_link">Új fiókot szeretnél létrehozni? Regisztrálj!</string>
    <string name="default_welcome">Üdv nálunk!</string>
    <string name="home_activity_description">
        Kezelje nálunk biztonságosan, gyorsan és papírmentesen vízfogyasztását!
    </string>
    <string name="logout">Kijelentkezés</string>
    <string name="invalid_email_format">Érvénytelen email-cím formátum</string>
    <string name="required_input_field">%1$s mező nem lehet üres</string>
    <string name="unknown_firebase_error">Ismeretlen hiba lépett fel a(z) %1$s során!</string>
    <string name="invalid_credentials_error">Hibás email-cím és/vagy jelszó!</string>
    <string name="email_already_registered_error">Az alábbi email-címmel már regisztráltak!</string>
    <string name="invalid_password">Legalább 6 karakter hosszú jelszóra van szükség</string>
    <string name="invalid_repeat_password">A jelszavak nem egyeznek</string>
    <string name="invalid_new_water_meter_state">Óvatosan, visszafelé nem pöröghet az óra</string>
    <string name="success_login">Sikeres bejelentkezés!</string>
    <string name="success_register">Sikeres regisztráció!</string>
    <string name="success_logout">Sikeres kijelentkezés!</string>
    <string name="water_meter_states_table_alt">water meter states table content</string>
    <string name="back_button_alt">Előző oldal</string>
    <string name="next_button_alt">Következő oldal</string>
    <string name="date">Dátum</string>
    <string name="water_meter_state">Vízóra állás</string>
    <string name="add">Hozzáad</string>
    <string name="cancel">Mégse</string>
    <string name="add_new_water_meter_state">Új Vízóra Állás Közététel</string>
    <string name="minus">−</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="add_new">Hozzáadás</string>
    <string name="edit_water_meter_state">Vízóra Állás Módosítás</string>
    <string name="edit">Módosít</string>
    <string name="no_water_meter_state_found">Nem található lejelentett vízóra állás</string>
    <string name="close">Bezár</string>
    <string name="delete">Töröl</string>
    <string name="link">Másra vágyik? Látogassa meg a Szegedi Vízművek oldalát!</string>
</resources>