<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:minHeight="250dp"
        android:paddingHorizontal="@dimen/activity_padding_horizontal"
        android:paddingTop="@dimen/activity_padding_vertical"
        android:paddingBottom="@dimen/separator" >

        <TextView
            android:id="@+id/bottomSheetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_heavy"
            android:text="@string/add_new_water_meter_state"
            android:textSize="@dimen/medium_font_size"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/stateInputContainer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottomSheetTitle"
            app:layout_constraintBottom_toTopOf="@id/bottomSheetButtons">

            <Button
                android:id="@+id/decreaseButton"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_font_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/stateInput"
                android:autofillHints=""
                android:inputType="number"
                android:minHeight="@dimen/min_touchable_layout_height"
                android:hint="@string/zero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center" />

            <Button
                android:id="@+id/increaseButton"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_font_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/stateError"
            style="@style/AppErrorText"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stateInputContainer" />

        <LinearLayout
            android:id="@+id/bottomSheetButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" >

            <Button
                android:id="@+id/addButton"
                style="@style/AppButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="@dimen/small_separator"
                android:text="@string/add"
                android:textSize="@dimen/normal_font_size" />
            <Button
                android:id="@+id/dismissButton"
                style="@style/AppButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="@dimen/normal_font_size" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>