<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:paddingTop="@dimen/small_separator" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/activity_padding_horizontal"
        android:paddingVertical="@dimen/activity_padding_vertical" >

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_heavy"
            android:text="@string/login"
            android:textSize="@dimen/large_font_size"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <EditText
            android:id="@+id/emailInput"
            style="@style/AppEditText"
            android:layout_marginTop="@dimen/large_separator"
            android:hint="@string/email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginTitle" />

        <TextView
            android:id="@+id/emailError"
            style="@style/AppErrorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailInput" />

        <EditText
            android:id="@+id/passwordInput"
            style="@style/AppEditText"
            android:hint="@string/password"
            android:autofillHints=""
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailError" />

        <TextView
            android:id="@+id/passwordError"
            style="@style/AppErrorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInput" />

        <Button
            android:id="@+id/loginButton"
            style="@style/AppButton"
            android:layout_marginTop="@dimen/large_separator"
            android:text="@string/login"
            android:onClick="login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordError" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_separator"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_link"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/normal_font_size"
            android:onClick="openRegisterActivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>